--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
-    <title>Hello, world!</title>
+    <title>Grow With Us</title>
   </head>
   <body>
     <div class="container">
@@ -68,13 +69,18 @@
     <div class="jumbotron">
       <div class="container">
         <div class="content">
-          <div class="col-lg-6 content-text">
-            <h1 class="display-4">Start to plant with us</h1>
-            <p class="lead">
+          <div class="col-lg-6 content-text" data-aos="fade-up-right" data-aos-duration="1000">
+            <h1 class="display-4">
+              Start to plant with us
+            </h1>
+            <p class="lead" >
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc odio
               in et, lectus sit lorem id integer.
             </p>
-            <a class="btn btn-get-started btn-lg" href="#" role="button"
+            <a
+              class="btn btn-get-started btn-lg"
+              href="#"
+              role="button"
               >Get Started</a
             >
           </div>
@@ -85,8 +91,132 @@
       </div>
     </div>
 
-    <!-- Optional JavaScript; choose one of the two! -->
+    <div class="container about">
+      <h1 data-aos="flip-left">About Us</h1>
+      <hr />
+      <div class="about-content row">
+        <div class="col-lg-6 img-about" data-aos="fade-up-right" data-aos-duration="1000">
+          <img
+            class="img1-about offset-lg-1"
+            src="/assets/images/about1.png"
+            alt=""
+          />
+          <img class="img2-about" src="/assets/images/about2.png" alt="" />
+        </div>
+        <div class="col-lg-6 text-about" data-aos="fade-up-left" data-aos-duration="1000">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fermentum
+            aliquam vel bibendum aliquam turpis egestas adipiscing fermentum
+            facilisis. At cursus molestie non tincidunt augue aliquam. Faucibus
+            in fames convallis bibendum. Non, fringilla arcu a mus tempor
+            sollicitudin sagittis.Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit.
+          </p>
+        </div>
+      </div>
+    </div>
 
+    <div class="container product">
+      <h1>Products</h1>
+      <hr />
+      <div class="product-content row">
+        <div class="col-lg-3" data-aos="fade-up" data-aos-duration="500">
+          <img src="/assets/images/tools.png" alt="" />
+          <a href="">Planting Tools</a>
+        </div>
+        <div class="col-lg-3" data-aos="fade-up" data-aos-duration="1000">
+          <img src="/assets/images/chilli.png" alt="" />
+          <a href="">Chilli Seeds</a>
+        </div>
+        <div class="col-lg-3" data-aos="fade-up" data-aos-duration="1500">
+          <img src="/assets/images/spinach .png" alt="" />
+          <a href="">Spinach Seeds</a>
+        </div>
+        <div class="col-lg-3" data-aos="fade-up" data-aos-duration="2000">
+          <img src="/assets/images/tomato.png" alt="" />
+          <a href="">Tomato Seeds</a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col text-center">
+          <button class="btn btn-product">See More</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="container service">
+      <h1>Service</h1>
+      <hr />
+      <div class="row service-row">
+        <div class="col-lg-4 content-service" data-aos="fade-up" data-aos-duration="500">
+          <img src="/assets/images/delevery.png" alt="" />
+          <p>delivery on time</p>
+        </div>
+        <div class="col-lg-4 content-service" data-aos="fade-up" data-aos-duration="1000">
+          <img src="/assets/images/teach.png" alt="" />
+          <p>teach you</p>
+        </div>
+        <div class="col-lg-4 content-service" data-aos="fade-up" data-aos-duration="1500">
+          <img src="/assets/images/control.png" alt="" />
+          <p>progress control</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="testimonial">
+      <div class="container">
+        <div class="row content-testi">
+          <div class="col-lg-6 content-testi">
+            <img src="/assets/images/quote.png" alt="" />
+            <h1 class="offset-lg-1">Real Stories from Real Customers</h1>
+            <p class="offset-lg-1">Get inspired by these stories.</p>
+            <div class="testi1">
+              <p class="offset-lg-4">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Explicabo atque neque dolores ad aliquid totam ullam vel
+                accusamus veritatis. Aspernatur quos rerum adipisci tenetur
+                laudantium ipsum voluptas doloribus minima iste?<br /><br />
+                <span><b>Floyd Miles</b></span
+                ><br />
+                <span>Jakarta</span>
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-6 content-testi">
+            <div class="testi2">
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Explicabo atque neque dolores ad aliquid totam ullam vel
+                accusamus veritatis. <br /><br />
+                <span><b>Floyd Miles</b></span
+                ><br />
+                <span>Bandung</span>
+              </p>
+            </div>
+            <div class="testi3">
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Explicabo atque neque dolores ad aliquid totam ullam vel
+                accusamus veritatis. <br /><br />
+                <span><b>Floyd Miles</b></span
+                ><br />
+                <span>Palembang</span>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container cta">
+      <div class="cta content-cta">
+        <h1>Still in doubt? interested with us</h1>
+        <h1>Just try it first</h1>
+        <button class="btn btn-cta">Buy Now</button>
+      </div>
+    </div>
+
+    <!-- Optional JavaScript; choose one of the two! -->
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -99,6 +229,10 @@
       crossorigin="anonymous"
     ></script>
     <script src="assets/js/script.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
