--- a/index.html
+++ b/index.html
@@ -263,6 +263,49 @@
       </div>
     </div>
 
+
+    <div class="container footer">
+        <div class="row content-footer offset-lg-1">
+            <div class="col-lg-3 content-footer">
+                <h5>Product</h5>
+                <p>Overview</p>
+                <p>Features</p>
+                <p>Tutorials</p>
+                <p>Pricing</p>
+                <p>Releases</p>
+            </div>
+            <div class="col-lg-3 content-footer">
+                <h5>Company</h5>
+                <p>About</p>
+                <p>Press</p>
+                <p>Careers</p>
+                <p>Contact</p>
+                <p>Partners</p>
+            </div>
+            <div class="col-lg-3 content-footer">
+                <h5>Legal</h5>
+                <p>Cookies Policy</p>
+                <p>Privacy Policy</p>
+                <p>Terms of Service</p>
+                <p>Law Enforcement</p>
+                <p>Status</p>
+            </div>
+            <div class="col-lg-3 content-footer">
+                <h5>Follow us</h5>
+                <p>Facebook</p>
+                <p>Twitter</p>
+                <p>Dribbble</p>
+                <p>Instagram</p>
+                <p>LinkedIn</p>
+            </div>
+        </div>
+       <div class="row sub-footer">
+       <div class="col-lg-12">
+        <img src="assets/images/shovel.png" alt=""> <br/>
+        <p>© 2020 GrowWithUs. All rights reserved.</p>
+       </div>
+       </div>
+    </div>
     <!-- Optional JavaScript; choose one of the two! -->
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script
