--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <div class="container">
         <div class="content">
           <div
-            class="col-lg-6 content-text"
+            class="col-lg-6 col-md-12 content-text"
             data-aos="fade-up-right"
             data-aos-duration="1000"
           >
@@ -99,7 +99,7 @@
       <hr />
       <div class="about-content row">
         <div
-          class="col-lg-6 img-about"
+          class="col-lg-6 img-about "
           data-aos="fade-up-right"
           data-aos-duration="1000"
         >
@@ -111,7 +111,7 @@
           <img class="img2-about" src="assets/images/about2.png" alt="" />
         </div>
         <div
-          class="col-lg-6 text-about"
+          class="col-lg-6 col-md-12 col-sm-12 text-about "
           data-aos="fade-up-left"
           data-aos-duration="1000"
         >
@@ -130,20 +130,20 @@
     <div class="container product" id="product">
       <h1 data-aos="flip-left">Products</h1>
       <hr />
-      <div class="product-content row">
-        <div class="col-lg-3" data-aos="fade-up" data-aos-duration="500">
+      <div class="product-content row ">
+        <div class="col-lg-3 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="500">
           <img src="assets/images/tools.png" alt="" />
           <a href="">Planting Tools</a>
         </div>
-        <div class="col-lg-3" data-aos="fade-up" data-aos-duration="1000">
+        <div class="col-lg-3 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="1000">
           <img src="assets/images/chilli.png" alt="" />
           <a href="">Chilli Seeds</a>
         </div>
-        <div class="col-lg-3" data-aos="fade-up" data-aos-duration="1500">
+        <div class="col-lg-3 col-md-6 col-sm-12"  data-aos="fade-up" data-aos-duration="1500">
           <img src="assets/images/spinach .png" alt="" />
           <a href="">Spinach Seeds</a>
         </div>
-        <div class="col-lg-3" data-aos="fade-up" data-aos-duration="2000">
+        <div class="col-lg-3 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="2000">
           <img src="assets/images/tomato.png" alt="" />
           <a href="">Tomato Seeds</a>
         </div>
