--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <img class="img1-about offset-lg-1" src="assets/images/about1.png" alt="" />
         <img class="img2-about" src="assets/images/about2.png" alt="" />
       </div>
-      <div class="col-lg-6 col-md-12 col-sm-12 text-about" data-aos="fade-up-left" data-aos-duration="1000">
+      <div class="col-lg-6 col-md-12 col-sm-12 text-about mt-3" data-aos="fade-up-right" data-aos-duration="1000">
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fermentum
           aliquam vel bibendum aliquam turpis egestas adipiscing fermentum
@@ -188,39 +188,40 @@
     </div>
   </div>
 
+
   <div class="container footer">
     <div class="row content-footer offset-lg-1">
-      <div class="col-lg-3 content-footer">
+      <div class="col-lg-3 col-md-6 col-sm-6 col-6 content-footer">
         <h5>Product</h5>
-        <p>Overview</p>
-        <p>Features</p>
-        <p>Tutorials</p>
-        <p>Pricing</p>
-        <p>Releases</p>
+        <a href="">Overview</a>
+        <a href="">Features</a>
+        <a href="">Tutorials</a>
+        <a href="">Pricing</a>
+        <a href="">Releases</a>
       </div>
-      <div class="col-lg-3 content-footer">
+      <div class="col-lg-3 col-md-6 col-sm-6 col-6 content-footer">
         <h5>Company</h5>
-        <p>About</p>
-        <p>Press</p>
-        <p>Careers</p>
-        <p>Contact</p>
-        <p>Partners</p>
+        <a href="">About</a>
+        <a href="">Press</a>
+        <a href="">Careers</a>
+        <a href="">Contact</a>
+        <a href="">Partners</a>
       </div>
-      <div class="col-lg-3 content-footer">
+      <div class="col-lg-3 col-md-6 col-sm-6 col-6 content-footer">
         <h5>Legal</h5>
-        <p>Cookies Policy</p>
-        <p>Privacy Policy</p>
-        <p>Terms of Service</p>
-        <p>Law Enforcement</p>
-        <p>Status</p>
+        <a href="">Cookies Policy</a>
+        <a href="">Privacy Policy</a>
+        <a href="">Terms of Service</a>
+        <a href="">Law Enforcement</a>
+        <a href="">Status</a>
       </div>
-      <div class="col-lg-3 content-footer">
+      <div class="col-lg-3 col-md-6 col-sm-6 col-6 content-footer">
         <h5>Follow us</h5>
-        <p>Facebook</p>
-        <p>Twitter</p>
-        <p>Dribbble</p>
-        <p>Instagram</p>
-        <p>LinkedIn</p>
+        <a href="">Facebook</a>
+        <a href="">Twitter</a>
+        <a href="">Instagram</a>
+        <a href="">Dribbble</a>
+        <a href="">LinkedIn</a>
       </div>
     </div>
     <div class="row sub-footer">
